Update index and main layout, using dynamic menus to implement

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,17 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+welcome=Welcome to Grails
+about=About US
+product=Product
+contact=Contact US
+help=Help
+
+menu.about=About US
+menu.product=Product
+menu.contact=Contact US
+menu.application_status=Application Status
+menu.artefacts=Artefacts
+menu.plugins=Installed Plugins
+menu.languages=Languages
